url-shortener/gitops/overlays/dev/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-backend
spec:
  template:
    spec:
      containers:
        - name: url-shortener
          command:
            - --environment
            - dev
