url-shortener/gitops/overlays/dev/api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-api
spec:
  template:
    spec:
      containers:
        - name: api
          image: ghcr.io/gilbertocunha/system-design:url-shortener-backend-git-sha-placeholder
          command:
            - /bin/url_shortener
            - --environment
            - dev
          # Prevent privilege escalation
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 500m
              memory: 100Mi
            limits:
              cpu: 1
              memory: 200Mi
          # Define readiness and liveness conditions
          # using probes
          readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8080
          livenessProbe:
            periodSeconds: 10
            httpGet:
              path: /healthz
              port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: url-shortener
spec:
  parentRefs:
    - name: gw-internal-dev
      namespace: gateway-system
      sectionName: https
    - name: gw-internal-dev
      namespace: gateway-system
      sectionName: http
  hostnames:
    - url-shortener.dev.k8s.homelab.grncunha.com
