url-shortener/gitops/overlays/dev/database.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: url-shortener-db
  labels:
    app: url-shortener
    role: db
  annotations:
    # Requires db resource to be created
    argocd.argoproj.io/sync-wave: "-1"
spec:
  parentRefs:
    - name: gw-internal-dev
      namespace: gateway-system
      sectionName: http
  hostnames:
    - url-shortener-db.dev.k8s.homelab.grncunha.com
  rules:
    - backendRefs:
        - name: url-shortener-db-rw
          port: 5432
